rubocop/examples/good/style_IfWithSemicolon.rb
# Do not use if x; .... Use the ternary operator instead.

# good
result = some_condition ? something : something_else
