rubocop/examples/bad/style_IfWithSemicolon.rb
# Do not use if x; .... Use the ternary operator instead.

# bad
result = if some_condition; something else something_else end
